# smolvlm_rk3588_full_npu_native

./: .gitignore  MANIFEST.in  README.md  build_rkllm_wheel.sh  pyproject.toml  requirements_convert.txt  requirements_infer.txt  rkllm_bindings_LICENSE  rkllm_bindings_README.md  rkllm_bindings_pyproject.toml
scripts/: convert.py  run_inference.py  validate.py
src/rkllm_bindings/: README.md  __init__.py  rkllm.py
src/rknn_patterns/: __init__.py  attention.py  blocks.py  common.py  sandwich.py
src/smolvlm_convert/: __init__.py  exporter.py
src/smolvlm_infer/: __init__.py  pipeline.py  runner.py
