[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smolvlm_con"
version = "0.1.0"
description = "SmolVLM Conversion and Inference Library"
authors = [{name = "Adhitya Mohan", email = "adhitya.mohan@colorado.edu"}]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
